test/types/file/freadIntFailed.good
freadIntFailed.chpl:2: error: Bad file descriptor: not readable in file.reader with path "_test_freadIntFailed.txt"
